trunk/Archive2/76/36fb4073110456/output
main.cpp: In function ‘int main()’:
main.cpp:7:9: error: redeclaration of ‘int a’
     int a;
         ^
main.cpp:6:9: note: ‘int a’ previously declared here
     int a;
         ^
main.cpp:6:9: error: unused variable ‘a’ [-Werror=unused-variable]
cc1plus: all warnings being treated as errors
