trunk/Archive2/76/36fb4073110456/main.cpp
#include <stdio.h>
#include <stdlib.h>

int main()
{
    int a;
    int a;
    return 0;
}
